--- a/templates/index_admin.html
+++ b/templates/index_admin.html
@@ -94,7 +94,7 @@
                                         <i class="fa fa-user"></i>
                                     </div>
                                     <div class="media-body pl-2">
-                                        <h3 class="mt-0 mb-0"><strong>300k</strong></h3>
+                                        <h3 class="mt-0 mb-0"><strong>{{ user_S }}</strong></h3>
                                         <p><small class="text-muted bc-description">Utilisateur</small></p>
                                     </div>
                                 </div>
@@ -108,7 +108,7 @@
                                         <i class="fas fa-user"></i>
                                     </div>
                                     <div class="media-body pl-2">
-                                        <h3 class="mt-0 mb-0"><strong>3.1M</strong></h3>
+                                        <h3 class="mt-0 mb-0"><strong>{{ user_P }}</strong></h3>
                                         <p><small class="text-muted bc-description">Psychologues</small></p>
                                     </div>
                                 </div>
@@ -122,7 +122,7 @@
                                         <i class="fa fa-tags text-theme"></i>
                                     </div>
                                     <div class="media-body pl-2">
-                                        <h3 class="mt-0 mb-0"><strong>1022</strong></h3>
+                                        <h3 class="mt-0 mb-0"><strong>{{ nbr_NP }}</strong></h3>
                                         <p><small class="bc-description text-white">Posts</small></p>
                                     </div>
                                 </div>
@@ -147,7 +147,7 @@
                             <div class="border shadow p-3 bg-danger">
                                 <p class="pw-2 text-center text-white">
                                     <i class="fa fa-smile"></i>
-                                    <small class="bc-description text-white">557</small>
+                                    <small class="bc-description text-white">{{ nbr_MS }}</small>
                                 </p>
                                 <p class="mt-2 text-white">Manage Stress</p>
                             </div>
@@ -157,7 +157,7 @@
                             <div class="border shadow p-3 bg-primary">
                                 <p class="pw-2 text-center text-white">
                                     <i class="fa fa-database"></i>
-                                    <small class="bc-description text-white">1225</small>
+                                    <small class="bc-description text-white">{{ nbr_RS }}</small>
                                 </p>
                                 <p class="mt-2 text-white">Ressources</p>
                             </div>
