--- a/templates/add_news_post.html
+++ b/templates/add_news_post.html
@@ -88,7 +88,7 @@
                     <div class="col-sm-12">
                         <!--Default elements-->
                         <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                            <form class="form-horizontal mt-4 mb-5" action="/create_news_post_admin" enctype="multipart/form-data">
+                            <form class="form-horizontal mt-4 mb-5" method="post" action="{% url 'create_news_post_admin' %}" enctype="multipart/form-data">
                                 {%  csrf_token %}
                                 <div class="form-group row">
                                     <label for="Titre" class="control-label col-sm-2">Titre</label>
