--- a/templates/add_ressource_admin.html
+++ b/templates/add_ressource_admin.html
@@ -86,7 +86,7 @@
                 <div class="row mt-3">
                     <div class="col-sm-12">
                         <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                            <form class="form-horizontal mt-4 mb-5" action="/create_ressource_admin" enctype="multipart/form-data">
+                            <form class="form-horizontal mt-4 mb-5" method="post" action="{% url 'create_ressource_admin' %}" enctype="multipart/form-data">
                                 {%  csrf_token %}
                                 <div class="form-group row">
                                     <label for="Titre_Ressource" class="control-label col-sm-2">Titre</label>
