index_app en cours

--- a/templates/add_user_admin.html
+++ b/templates/add_user_admin.html
@@ -115,8 +115,8 @@
                                         <label for="Profession" class="control-label col-sm-2">Profession</label>
                                         <div class="col-sm-10">
                                             <select name="Profession" class="custom-select">
-                                                <option value="Etudiant">Etudiant</option><option value="Professeur">Professeur</option>")
-                                                <option value="Professeur">Professeur</option><option value="Etudiant">Etudiant</option>")
+                                                <option value="Etudiant">Etudiant</option>
+                                                <option value="Professeur">Professeur</option>
                                             </select>
                                         </div>
                                     </div>
@@ -124,8 +124,8 @@
                                         <label for="Status" class="control-label col-sm-2">Status</label>
                                         <div class="col-sm-10">
                                             <select name="Status" class="custom-select">
-                                                <option value="Utilisateur Simple">Utilisateur Simple</option><option value="Psychologue">Psychologue</option>")
-                                                <option value="Psychologue">Psychologue</option><option value="Utilisateur Simple">Utilisateur Simple</option>")
+                                                <option value="Utilisateur Simple">Utilisateur Simple</option>
+                                                <option value="Psychologue">Psychologue</option>
                                             </select>
                                         </div>
                                     </div>
