--- a/templates/edit_news_post.html
+++ b/templates/edit_news_post.html
@@ -105,7 +105,7 @@
                                 <div class="form-group row">
                                     <label for="Fichier" class="control-label col-sm-2">Fichier</label>
                                     <div class="col-sm-10">
-                                        <input type="file" name="Fichier" class="form-control" src="{{ data.url }}" value="{{ data }}" />
+                                        <input type="file" name="Fichier" class="form-control" src="{{ NP.Fichier.path }}" value="{{ NP.Fichier }}" />
                                     </div>
                                 </div>
                                 <div class="form-group row">
