--- a/templates/manage_stress_admin.html
+++ b/templates/manage_stress_admin.html
@@ -110,10 +110,10 @@
                                             <td>{{ ms.Fichier_MS }}</td>
                                             <td>{{ ms.Date_pub_MS}}</td>
                                             <td>
-                                                <a class="btn btn-info btn-round" href="/edit_manage_stress_admin/{{ ms.id }}">
+                                                <a class="btn btn-info icon-round" href="/edit_manage_stress_admin/{{ ms.id }}">
                                                     <i class="fa fa-edit"></i>
                                                 </a>
-                                                <a class="btn btn-danger btn-round" href="/delete_manage_stress_admin/{{ ms.id }}">
+                                                <a class="btn btn-danger icon-round" href="/delete_manage_stress_admin/{{ ms.id }}">
                                                     <i class="fa fa-trash"></i>
                                                 </a>
                                             </td>
