--- a/templates/news_post.html
+++ b/templates/news_post.html
@@ -116,10 +116,10 @@
                                             <td>{{ pub.Date_pub }}</td>
                                             <td>{{ pub.Type }}</td>
                                             <td>
-                                                <a class="btn btn-info btn-round" href="/edit_news_post_admin/{{ pub.id }}">
+                                                <a class="btn btn-info icon-round" href="/edit_news_post_admin/{{ pub.id }}">
                                                     <i class="fa fa-edit"></i>
                                                 </a>
-                                                <a class="btn btn-danger btn-round" href="/delete_news_post_admin/{{ pub.id }}">
+                                                <a class="btn btn-danger icon-round" href="/delete_news_post_admin/{{ pub.id }}">
                                                     <i class="fa fa-trash"></i>
                                                 </a>
                                             </td>
