--- a/templates/ressources_admin.html
+++ b/templates/ressources_admin.html
@@ -112,10 +112,10 @@
                                             <td>{{ src.Fichier_Ressource }}</td>
                                             <td>{{ src.Date_pub_Ressource }}</td>
                                             <td>
-                                                <a class="btn btn-info btn-round" href="/edit_ressource_admin/{{ src.id }}">
+                                                <a class="btn btn-info icon-round" href="/edit_ressource_admin/{{ src.id }}">
                                                     <i class="fa fa-edit"></i>
                                                 </a>
-                                                <a class="btn btn-danger btn-round" href="/delete_ressource_admin/{{ src.id }}">
+                                                <a class="btn btn-danger icon-round" href="/delete_ressource_admin/{{ src.id }}">
                                                     <i class="fa fa-trash"></i>
                                                 </a>
                                             </td>
