--- a/templates/user_admin.html
+++ b/templates/user_admin.html
@@ -50,7 +50,7 @@
                                     </a>  
                                 </li>
                                 <li class="parent">
-                                    <a href="#" class=""><i class="fas fa-user-circle mr-3"></i>
+                                    <a href="/user_admin" class=""><i class="fas fa-user-circle mr-3"></i>
                                         <span class="none">Utilisateur </span>
                                     </a>
                                 </li>
@@ -116,10 +116,10 @@
                                                 <td>{{ us.Profession }}</td>
                                                 <td>{{ us.Status }}</td>
                                                 <td>
-                                                    <a class="btn btn-info btn-round" href="/edit_user_admin/{{ us.id }}">
+                                                    <a class="btn btn-info icon-round" href="/edit_user_admin/{{ us.id }}">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
-                                                    <a class="btn btn-danger btn-round" href="/delete_user_admin/{{ us.id }}">
+                                                    <a class="btn btn-danger icon-round" href="/delete_user_admin/{{ us.id }}">
                                                         <i class="fa fa-trash"></i>
                                                     </a>
                                                 </td>
