--- a/templates/ressource_app.html
+++ b/templates/ressource_app.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
     {% endblock stylesheet %}
 
-    {% block title %}Acceuil{% endblock title %}
+    {% block title %}Ressource{% endblock title %}
 
     {% block content %}
 
@@ -41,7 +41,7 @@
                 <div class="sidebar-menu-container">
                     <ul class="sidebar-menu mt-4 mb-4">
                         <li class="parent">
-                            <a href="" class=""><i class="fa fa-rocket mr-3"> </i>
+                            <a href="/index_app" class=""><i class="fa fa-rocket mr-3"> </i>
                                 <span class="none">Acceuil</span>
                             </a>  
                         </li>
@@ -82,74 +82,61 @@
                     <div class="mt-1 mb-3 p-3 button-container border bg-white shadow-sm custom-tabs">
                         <nav>
                             <div class="nav nav-tabs nav-fill" id="nav-customContent" role="tablist">
-                                <a class="nav-item nav-link active" id="nav-journal" data-toggle="tab" href="#custom-journal" role="tab" aria-controls="nav-journal" aria-selected="true">Journal</a>
-                                <a class="nav-item nav-link" id="nav-ms" data-toggle="tab" href="#custom-ms" role="tab" aria-controls="nav-ms" aria-selected="false">Gérer votre stress</a>
-                                <a class="nav-item nav-link" id="nav-src" data-toggle="tab" href="#custom-src" role="tab" aria-controls="nav-src" aria-selected="false">Ressource</a>
+                                <a class="nav-item nav-link active" id="nav-psy" data-toggle="tab" href="#custom-psy" role="tab" aria-controls="nav-psy" aria-selected="true">Nos Psychologues</a>
+                                <a class="nav-item nav-link" id="nav-src" data-toggle="tab" href="#custom-src" role="tab" aria-controls="nav-src" aria-selected="false">Ressources Externes</a>
                             </div>
                         </nav>
                         <div class="tab-content py-3 px-3 px-sm-0" id="nav-customContent">
-                            <div class="tab-pane fade show active" id="custom-journal" role="tabpanel" aria-labelledby="nav-journal">
-                                <div class="mt-1 mb-5 button-container">
-                                    <div class="card-group">
-                                        {% for np in NP %}
-                                        <div class="card">
-                                            <div class="card_header">
-                                                <img class="card-img-top" src="{{ np.Fichier.url }}" alt="Card image cap">
-                                            </div>
-                                            <div class="card-body">
-                                                <h5 class="card-title text-left">{{ np.Titre }}</h5>
-                                                <p class="card-text"><small class="text-muted">{{ np.Date_pub }}</small></p>
-                                            </div>
-                                        </div>
-                                        {% endfor %}
-                                    </div>
-                                </div>
-                                <a class="btn btn-info btn-round" href="#">
-                                    <i class="fas fa-info">   Plus de détails </i>
-                                </a>
-                            </div>
-                            <div class="tab-pane fade" id="custom-ms" role="tabpanel" aria-labelledby="nav-ms">
-                                <div class="mt-1 mb-5 button-container">
-                                    <div class="card-group">
-                                        {% for ms in MS %}
-                                        <div class="card">
-                                            <img class="card-img-top" src="{{ ms.Fichier_MS.url }}" alt="Card image cap">
-                                            <div class="card-body">
-                                                <h5 class="card-title">{{ ms.Titre_MS }}</h5>
-                                                <p class="card-text"><small class="text-muted">{{ ms.Date_pub_MS }}</small></p>
+                            <div class="tab-pane fade show active" id="custom-psy" role="tabpanel" aria-labelledby="nav-psy">
+                                <div class="mt-1 mb-3 button-container">
+                                    <div class="row pl-0">
+                                        {% for user in usr %}
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
+                                            <div class="bg-white border shadow">
+                                                <div class="media p-4">
+                                                    <div class="align-self-center mr-3 rounded-circle notify-icon bg-danger">
+                                                        <i class="fas fa-user"></i>
+                                                    </div>
+                                                    <div class="media-body pl-2">
+                                                        <h3 class="mt-0 mb-0"><strong>{{ user.Nom_Complet }}</strong></h3>
+                                                        <a class="btn btn-primary btn-round" href="#">
+                                                            <i class="fas fa-comments"> Contacter </i>
+                                                        </a>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         {% endfor %}
                                     </div>
                                 </div>
-                                <a class="btn btn-info btn-round" href="/manage_stress_app">
-                                    <i class="fas fa-info">   Plus de détails </i>
-                                </a>
                             </div>
+
                             <div class="tab-pane fade" id="custom-src" role="tabpanel" aria-labelledby="nav-src">
-                                <div class="mt-1 mb-5 button-container">
-                                    <div class="card-group">
-                                        {% for src in RS %}
-                                        <div class="card">
-                                            <img class="card-img-top" src="{{ src.Fichier_Ressource.url }}" alt="Card image cap">
-                                            <div class="card-body">
-                                                <h5 class="card-title">{{ src.Titre_Ressource }}</h5>
-                                                <p class="card-text"><small class="text-muted">{{ src.Date_pub_Ressource }}</small></p>
+                                <div class="mt-1 mb-3 button-container">
+                                    <div class="row pl-0">
+                                        {% for src in Ressource %}
+                                        <div class="col-lg-4 col-md-4 col-sm-6 col-12 mb-3">
+                                            <div class="card">
+                                                <img class="card-img-top" src="{{ src.Fichier_Ressource.url }}">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">{{ src.Titre_Ressource }}</h5>
+                                                    <p class="card-text">{{ src.Description_Ressource }}</p>
+                                                    <p class="card-text"><small class="text-muted">{{ src.Date_pub_Ressource }}</small></p>
+                                                    <a class="btn btn-primary btn-round" href="#">
+                                                        <i class="fas fa-info"> Voir </i>
+                                                    </a>
+                                                </div>
                                             </div>
                                         </div>
                                         {% endfor %}
                                     </div>
                                 </div>
-                                <a class="btn btn-info btn-round" href="/ressource_app">
-                                    <i class="fas fa-info">   Plus de détails </i>
-                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 
     {% endblock content %}
