--- a/templates/manage_stress_app.html
+++ b/templates/manage_stress_app.html
@@ -46,7 +46,7 @@
                             </a>  
                         </li>
                         <li class="parent">
-                            <a href="#" class=""><i class="fas fa-book mr-3"> </i>
+                            <a href="/journal_app" class=""><i class="fas fa-book mr-3"> </i>
                                 <span class="none">Journal</span>
                             </a>  
                         </li>
@@ -91,7 +91,7 @@
                                     <p class="card-text"><small class="text-muted">{{ ms.Date_pub_MS }}</small></p>
                                 </div>
                             </div>
-                        </div>
+                        </div><br>
                         {% endfor %}
                     </div>
                     <!--/Card groups-->
