--- a/templates/ressource_app.html
+++ b/templates/ressource_app.html
@@ -46,7 +46,7 @@
                             </a>  
                         </li>
                         <li class="parent">
-                            <a href="#" class=""><i class="fas fa-book mr-3"> </i>
+                            <a href="/journal_app" class=""><i class="fas fa-book mr-3"> </i>
                                 <span class="none">Journal</span>
                             </a>  
                         </li>
