--- a/templates/index_app.html
+++ b/templates/index_app.html
@@ -46,7 +46,7 @@
                             </a>  
                         </li>
                         <li class="parent">
-                            <a href="#" class=""><i class="fas fa-book mr-3"> </i>
+                            <a href="/journal_app" class=""><i class="fas fa-book mr-3"> </i>
                                 <span class="none">Journal</span>
                             </a>  
                         </li>
@@ -104,7 +104,7 @@
                                         {% endfor %}
                                     </div>
                                 </div>
-                                <a class="btn btn-info btn-round" href="#">
+                                <a class="btn btn-info btn-round" href="/journal_app">
                                     <i class="fas fa-info">   Plus de détails </i>
                                 </a>
                             </div>
